--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropdown-select": "^4.9.0",
     "react-router-dom": "^6.4.3",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
     "slick-carousel": "^1.8.1"
   },
